// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformFill should transform ERC20 asset 1`] = `
Object {
  "amount": "0.275",
  "bridgeAddress": undefined,
  "bridgeName": undefined,
  "price": Object {
    "USD": 137.36999999999998,
  },
  "tokenAddress": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
  "tokenId": undefined,
  "tokenImageUrl": "https://cdn.staticaly.com/gh/TrustWallet/tokens/master/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2.png",
  "tokenSymbol": "WETH",
  "tokenType": "Wrapped Ether",
  "traderType": "taker",
  "type": "erc-20",
}
`;

exports[`transformFill should transform ERC721 asset 1`] = `
Object {
  "amount": "1",
  "bridgeAddress": undefined,
  "bridgeName": undefined,
  "price": Object {
    "USD": 37.77675,
  },
  "tokenAddress": "0xf5b0a3efb8e8e4c201e2a935f110eaaf3ffecb8d",
  "tokenId": 43381,
  "tokenImageUrl": "https://cdn.staticaly.com/gh/TrustWallet/tokens/master/tokens/0xf5b0a3efb8e8e4c201e2a935f110eaaf3ffecb8d.png",
  "tokenSymbol": "AXIE",
  "tokenType": "Axie",
  "traderType": "maker",
  "type": "erc-721",
}
`;

exports[`transformFill should transform V1 fill 1`] = `
Object {
  "assets": Array [
    Object {
      "amount": "7.1373405",
      "bridgeAddress": undefined,
      "bridgeName": undefined,
      "price": Object {
        "USD": 224.42000000000002,
      },
      "tokenAddress": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "tokenId": undefined,
      "tokenImageUrl": "https://cdn.staticaly.com/gh/TrustWallet/tokens/master/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2.png",
      "tokenSymbol": "WETH",
      "tokenType": "Wrapped Ether",
      "traderType": "maker",
      "type": "erc-20",
    },
    Object {
      "amount": "300000",
      "bridgeAddress": undefined,
      "bridgeName": undefined,
      "price": Object {
        "USD": 0.0053392065167000005,
      },
      "tokenAddress": "0xd7732e3783b0047aa251928960063f863ad022d8",
      "tokenId": undefined,
      "tokenImageUrl": "https://cdn.staticaly.com/gh/TrustWallet/tokens/master/tokens/0xd7732e3783b0047aa251928960063f863ad022d8.png",
      "tokenSymbol": "BRM",
      "tokenType": "BrahmaOS",
      "traderType": "taker",
      "type": "erc-20",
    },
  ],
  "date": "2018-09-06T10:47:38.000Z",
  "feeRecipient": "0xe269e891a2ec8585a378882ffa531141205e92e9",
  "fees": undefined,
  "id": "5b9107e00d05f400042e3494",
  "makerAddress": "0x8dd688660ec0babd0b8a2f2de3232645f73cc5eb",
  "makerFee": Object {
    "USD": 9.13,
    "ZRX": "15",
  },
  "orderHash": "0xd7cbdddb68cfa6216e867227a4cb8ca281e0d82921000b4b977d6038535482f5",
  "protocolFee": undefined,
  "protocolVersion": 1,
  "relayer": Object {
    "imageUrl": "https://resources.0xtracker.com/logos/ethfinex.png",
    "name": "Ethfinex",
    "slug": "ethfinex",
  },
  "senderAddress": undefined,
  "status": "successful",
  "takerAddress": "0xe269e891a2ec8585a378882ffa531141205e92e9",
  "takerFee": Object {
    "USD": 3.04,
    "ZRX": "5",
  },
  "totalFees": Object {
    "USD": 12.170000000000002,
    "ZRX": "20",
  },
  "transactionHash": "0x4c69e925be055eec7bc49cc681fd5267d1aca7e1db21f687ab19ab9d75b7447c",
  "value": Object {
    "USD": 1601.76195501,
  },
}
`;

exports[`transformFill should transform V1 fill with unrecognised maker asset 1`] = `
Object {
  "amount": undefined,
  "bridgeAddress": undefined,
  "bridgeName": undefined,
  "price": Object {
    "USD": 224.42000000000002,
  },
  "tokenAddress": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
  "tokenId": undefined,
  "tokenImageUrl": null,
  "tokenSymbol": undefined,
  "tokenType": undefined,
  "traderType": "maker",
  "type": undefined,
}
`;

exports[`transformFill should transform V1 fill with unrecognised taker asset 1`] = `
Object {
  "amount": undefined,
  "bridgeAddress": undefined,
  "bridgeName": undefined,
  "price": Object {
    "USD": 0.0053392065167000005,
  },
  "tokenAddress": "0xd7732e3783b0047aa251928960063f863ad022d8",
  "tokenId": undefined,
  "tokenImageUrl": null,
  "tokenSymbol": undefined,
  "tokenType": undefined,
  "traderType": "taker",
  "type": undefined,
}
`;

exports[`transformFill should transform V2 fill 1`] = `
Object {
  "assets": Array [
    Object {
      "amount": "1",
      "bridgeAddress": undefined,
      "bridgeName": undefined,
      "price": Object {
        "USD": 37.77675,
      },
      "tokenAddress": "0xf5b0a3efb8e8e4c201e2a935f110eaaf3ffecb8d",
      "tokenId": 43381,
      "tokenImageUrl": "https://cdn.staticaly.com/gh/TrustWallet/tokens/master/tokens/0xf5b0a3efb8e8e4c201e2a935f110eaaf3ffecb8d.png",
      "tokenSymbol": "AXIE",
      "tokenType": "Axie",
      "traderType": "maker",
      "type": "erc-721",
    },
    Object {
      "amount": "0.275",
      "bridgeAddress": undefined,
      "bridgeName": undefined,
      "price": Object {
        "USD": 137.36999999999998,
      },
      "tokenAddress": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "tokenId": undefined,
      "tokenImageUrl": "https://cdn.staticaly.com/gh/TrustWallet/tokens/master/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2.png",
      "tokenSymbol": "WETH",
      "tokenType": "Wrapped Ether",
      "traderType": "taker",
      "type": "erc-20",
    },
  ],
  "date": "2018-09-06T10:47:38.000Z",
  "feeRecipient": "0xe269e891a2ec8585a378882ffa531141205e92e9",
  "fees": undefined,
  "id": "5b9107e00d05f400042e3494",
  "makerAddress": "0x8dd688660ec0babd0b8a2f2de3232645f73cc5eb",
  "makerFee": Object {
    "USD": 0.2,
    "ZRX": "15",
  },
  "orderHash": "0xd7cbdddb68cfa6216e867227a4cb8ca281e0d82921000b4b977d6038535482f5",
  "protocolFee": undefined,
  "protocolVersion": 2,
  "relayer": Object {
    "imageUrl": "https://resources.0xtracker.com/logos/ethfinex.png",
    "name": "Ethfinex",
    "slug": "ethfinex",
  },
  "senderAddress": undefined,
  "status": "successful",
  "takerAddress": "0xe269e891a2ec8585a378882ffa531141205e92e9",
  "takerFee": Object {
    "USD": 0.3,
    "ZRX": "5",
  },
  "totalFees": Object {
    "USD": 0.5,
    "ZRX": "20",
  },
  "transactionHash": "0x4c69e925be055eec7bc49cc681fd5267d1aca7e1db21f687ab19ab9d75b7447c",
  "value": Object {
    "USD": 37.77675,
  },
}
`;
